// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base <Step /> buttons disabled if fields are filled improperly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
        class="sc-lmoMRL dkiict"
        id="testForm"
      >
        <div
          class="sc-ezrdKe gBFqDK"
        >
          <div
            class="sc-kLgntA gqMeOj"
          >
            <div
              class="sc-giIncl gkzvNA"
            >
              1. Podstawowe dane
            </div>
            <div
              class="sc-giIncl kNgfLi"
            >
              2. Szczegółowe dane
            </div>
          </div>
          <div
            class="sc-hKgILt bckkbl"
          >
            <label
              for="fName"
            >
              Imię*
            </label>
            <div
              class="sc-dIUggk hEHKqS"
            >
              <input
                class="sc-pFZIQ kIcSeo"
                label="Imię"
                name="fName"
                placeholder="Imię*"
                required=""
                value="123"
              />
            </div>
          </div>
          <div
            class="sc-bYEvPH iVCcgK"
          >
            <button
              class="sc-iJuUWI eufkVy"
              disabled=""
              type="button"
            >
              Dalej
            </button>
          </div>
        </div>
        <div
          class="sc-ezrdKe eflciR"
        >
          <div
            class="sc-kLgntA gqMeOj"
          >
            <div
              class="sc-giIncl kNgfLi"
            >
              2. Szczegółowe dane
            </div>
          </div>
          <div
            class="sc-bYEvPH iVCcgK"
          >
            <button
              class="sc-iJuUWI eufkVy"
              disabled=""
              type="button"
            >
              Dalej
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
      class="sc-lmoMRL dkiict"
      id="testForm"
    >
      <div
        class="sc-ezrdKe gBFqDK"
      >
        <div
          class="sc-kLgntA gqMeOj"
        >
          <div
            class="sc-giIncl gkzvNA"
          >
            1. Podstawowe dane
          </div>
          <div
            class="sc-giIncl kNgfLi"
          >
            2. Szczegółowe dane
          </div>
        </div>
        <div
          class="sc-hKgILt bckkbl"
        >
          <label
            for="fName"
          >
            Imię*
          </label>
          <div
            class="sc-dIUggk hEHKqS"
          >
            <input
              class="sc-pFZIQ kIcSeo"
              label="Imię"
              name="fName"
              placeholder="Imię*"
              required=""
              value="123"
            />
          </div>
        </div>
        <div
          class="sc-bYEvPH iVCcgK"
        >
          <button
            class="sc-iJuUWI eufkVy"
            disabled=""
            type="button"
          >
            Dalej
          </button>
        </div>
      </div>
      <div
        class="sc-ezrdKe eflciR"
      >
        <div
          class="sc-kLgntA gqMeOj"
        >
          <div
            class="sc-giIncl kNgfLi"
          >
            2. Szczegółowe dane
          </div>
        </div>
        <div
          class="sc-bYEvPH iVCcgK"
        >
          <button
            class="sc-iJuUWI eufkVy"
            disabled=""
            type="button"
          >
            Dalej
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "firstName": <input
    class="sc-pFZIQ kIcSeo"
    label="Imię"
    name="fName"
    placeholder="Imię*"
    required=""
    value="123"
  />,
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`base <Step /> buttons disabled if required fields are not filled 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
        class="sc-lmoMRL dkiict"
        id="testForm"
      >
        <div
          class="sc-ezrdKe gBFqDK"
        >
          <div
            class="sc-kLgntA gqMeOj"
          >
            <div
              class="sc-giIncl gkzvNA"
            >
              1. Podstawowe dane
            </div>
            <div
              class="sc-giIncl kNgfLi"
            >
              2. Szczegółowe dane
            </div>
          </div>
          <div
            class="sc-hKgILt bckkbl"
          >
            <label
              for="fName"
            >
              Imię*
            </label>
            <div
              class="sc-dIUggk hEHKqS"
            >
              <input
                class="sc-pFZIQ kIcSeo"
                label="Imię"
                name="fName"
                placeholder="Imię*"
                required=""
                value=""
              />
            </div>
          </div>
          <div
            class="sc-bYEvPH iVCcgK"
          >
            <button
              class="sc-iJuUWI eufkVy"
              disabled=""
              type="button"
            >
              Dalej
            </button>
          </div>
        </div>
        <div
          class="sc-ezrdKe eflciR"
        >
          <div
            class="sc-kLgntA gqMeOj"
          >
            <div
              class="sc-giIncl kNgfLi"
            >
              2. Szczegółowe dane
            </div>
          </div>
          <div
            class="sc-bYEvPH iVCcgK"
          >
            <button
              class="sc-iJuUWI eufkVy"
              disabled=""
              type="button"
            >
              Dalej
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
      class="sc-lmoMRL dkiict"
      id="testForm"
    >
      <div
        class="sc-ezrdKe gBFqDK"
      >
        <div
          class="sc-kLgntA gqMeOj"
        >
          <div
            class="sc-giIncl gkzvNA"
          >
            1. Podstawowe dane
          </div>
          <div
            class="sc-giIncl kNgfLi"
          >
            2. Szczegółowe dane
          </div>
        </div>
        <div
          class="sc-hKgILt bckkbl"
        >
          <label
            for="fName"
          >
            Imię*
          </label>
          <div
            class="sc-dIUggk hEHKqS"
          >
            <input
              class="sc-pFZIQ kIcSeo"
              label="Imię"
              name="fName"
              placeholder="Imię*"
              required=""
              value=""
            />
          </div>
        </div>
        <div
          class="sc-bYEvPH iVCcgK"
        >
          <button
            class="sc-iJuUWI eufkVy"
            disabled=""
            type="button"
          >
            Dalej
          </button>
        </div>
      </div>
      <div
        class="sc-ezrdKe eflciR"
      >
        <div
          class="sc-kLgntA gqMeOj"
        >
          <div
            class="sc-giIncl kNgfLi"
          >
            2. Szczegółowe dane
          </div>
        </div>
        <div
          class="sc-bYEvPH iVCcgK"
        >
          <button
            class="sc-iJuUWI eufkVy"
            disabled=""
            type="button"
          >
            Dalej
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "firstName": <input
    class="sc-pFZIQ kIcSeo"
    label="Imię"
    name="fName"
    placeholder="Imię*"
    required=""
    value=""
  />,
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`base <Step /> matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
        class="sc-lmoMRL dkiict"
        id="testForm"
      >
        <div
          class="sc-ezrdKe gBFqDK"
        >
          <div
            class="sc-kLgntA gqMeOj"
          >
            <div
              class="sc-giIncl gkzvNA"
            >
              1. Podstawowe dane
            </div>
            <div
              class="sc-giIncl kNgfLi"
            >
              2. Szczegółowe dane
            </div>
          </div>
          <div
            class="sc-hKgILt bckkbl"
          >
            <label
              for="fName"
            >
              Imię*
            </label>
            <div
              class="sc-dIUggk hEHKqS"
            >
              <input
                class="sc-pFZIQ kIcSeo"
                label="Imię"
                name="fName"
                placeholder="Imię*"
                required=""
                value=""
              />
            </div>
          </div>
          <div
            class="sc-bYEvPH iVCcgK"
          >
            <button
              class="sc-iJuUWI eufkVy"
              disabled=""
              type="button"
            >
              Dalej
            </button>
          </div>
        </div>
        <div
          class="sc-ezrdKe eflciR"
        >
          <div
            class="sc-kLgntA gqMeOj"
          >
            <div
              class="sc-giIncl kNgfLi"
            >
              2. Szczegółowe dane
            </div>
          </div>
          <div
            class="sc-bYEvPH iVCcgK"
          >
            <button
              class="sc-iJuUWI eufkVy"
              disabled=""
              type="button"
            >
              Dalej
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
      class="sc-lmoMRL dkiict"
      id="testForm"
    >
      <div
        class="sc-ezrdKe gBFqDK"
      >
        <div
          class="sc-kLgntA gqMeOj"
        >
          <div
            class="sc-giIncl gkzvNA"
          >
            1. Podstawowe dane
          </div>
          <div
            class="sc-giIncl kNgfLi"
          >
            2. Szczegółowe dane
          </div>
        </div>
        <div
          class="sc-hKgILt bckkbl"
        >
          <label
            for="fName"
          >
            Imię*
          </label>
          <div
            class="sc-dIUggk hEHKqS"
          >
            <input
              class="sc-pFZIQ kIcSeo"
              label="Imię"
              name="fName"
              placeholder="Imię*"
              required=""
              value=""
            />
          </div>
        </div>
        <div
          class="sc-bYEvPH iVCcgK"
        >
          <button
            class="sc-iJuUWI eufkVy"
            disabled=""
            type="button"
          >
            Dalej
          </button>
        </div>
      </div>
      <div
        class="sc-ezrdKe eflciR"
      >
        <div
          class="sc-kLgntA gqMeOj"
        >
          <div
            class="sc-giIncl kNgfLi"
          >
            2. Szczegółowe dane
          </div>
        </div>
        <div
          class="sc-bYEvPH iVCcgK"
        >
          <button
            class="sc-iJuUWI eufkVy"
            disabled=""
            type="button"
          >
            Dalej
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "firstName": <input
    class="sc-pFZIQ kIcSeo"
    label="Imię"
    name="fName"
    placeholder="Imię*"
    required=""
    value=""
  />,
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`base <Step /> setNextButtonDisabled have been called after fill step fields 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
        class="sc-lmoMRL dkiict"
        id="testForm"
      >
        <div
          class="sc-ezrdKe gBFqDK"
        >
          <div
            class="sc-kLgntA gqMeOj"
          >
            <div
              class="sc-giIncl gkzvNA"
            >
              1. Podstawowe dane
            </div>
            <div
              class="sc-giIncl kNgfLi"
            >
              2. Szczegółowe dane
            </div>
          </div>
          <div
            class="sc-hKgILt bckkbl"
          >
            <label
              for="fName"
            >
              Imię*
            </label>
            <div
              class="sc-dIUggk hEHKqS"
            >
              <input
                class="sc-pFZIQ kIcSeo"
                label="Imię"
                name="fName"
                placeholder="Imię*"
                required=""
                value="test"
              />
            </div>
          </div>
          <div
            class="sc-bYEvPH iVCcgK"
          >
            <button
              class="sc-iJuUWI eufkVy"
              type="button"
            >
              Dalej
            </button>
          </div>
        </div>
        <div
          class="sc-ezrdKe eflciR"
        >
          <div
            class="sc-kLgntA gqMeOj"
          >
            <div
              class="sc-giIncl kNgfLi"
            >
              2. Szczegółowe dane
            </div>
          </div>
          <div
            class="sc-bYEvPH iVCcgK"
          >
            <button
              class="sc-iJuUWI eufkVy"
              disabled=""
              type="button"
            >
              Dalej
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
      class="sc-lmoMRL dkiict"
      id="testForm"
    >
      <div
        class="sc-ezrdKe gBFqDK"
      >
        <div
          class="sc-kLgntA gqMeOj"
        >
          <div
            class="sc-giIncl gkzvNA"
          >
            1. Podstawowe dane
          </div>
          <div
            class="sc-giIncl kNgfLi"
          >
            2. Szczegółowe dane
          </div>
        </div>
        <div
          class="sc-hKgILt bckkbl"
        >
          <label
            for="fName"
          >
            Imię*
          </label>
          <div
            class="sc-dIUggk hEHKqS"
          >
            <input
              class="sc-pFZIQ kIcSeo"
              label="Imię"
              name="fName"
              placeholder="Imię*"
              required=""
              value="test"
            />
          </div>
        </div>
        <div
          class="sc-bYEvPH iVCcgK"
        >
          <button
            class="sc-iJuUWI eufkVy"
            type="button"
          >
            Dalej
          </button>
        </div>
      </div>
      <div
        class="sc-ezrdKe eflciR"
      >
        <div
          class="sc-kLgntA gqMeOj"
        >
          <div
            class="sc-giIncl kNgfLi"
          >
            2. Szczegółowe dane
          </div>
        </div>
        <div
          class="sc-bYEvPH iVCcgK"
        >
          <button
            class="sc-iJuUWI eufkVy"
            disabled=""
            type="button"
          >
            Dalej
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "firstName": <input
    class="sc-pFZIQ kIcSeo"
    label="Imię"
    name="fName"
    placeholder="Imię*"
    required=""
    value="test"
  />,
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
